# ports-of-call

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ports-of-callConfig.cmake.in
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  formatting.yml  install.yml  tests-minimal.yml
.gitlab/: build_and_test.sh  common.yml  download_prereqs.sh  kessel.sh
.kessel/workflows/: cdash.py  cmake.py
HEAD/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
HEAD/.doctrees/: environment.pickle  index.doctree
HEAD/src/: building.html  developing.html  sphinx-howto.html  using.html
bkk_additional_utilities/: .buildinfo  genindex.html  index.html  search.html
bkk_additional_utilities/.doctrees/: environment.pickle  index.doctree
bkk_additional_utilities/src/: building.html  developing.html  sphinx-howto.html  using.html
bkk_span/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
bkk_span/.doctrees/: environment.pickle  index.doctree
bkk_span/src/: building.html  developing.html  sphinx-howto.html  using.html
bkk_static_vector/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
bkk_static_vector/.doctrees/: environment.pickle  index.doctree
bkk_static_vector/src/: building.html  developing.html  sphinx-howto.html  using.html
cmake/: Format.cmake  ports-of-callConfig.cmake.in
dempsey/memory/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
dholladay00/ragged_array/: .buildinfo  genindex.html  index.html  search.html
doc/sphinx/: conf.py  index.rst
fortran/: .buildinfo  genindex.html  index.html  objects.inv  search.html
fortran/.doctrees/: environment.pickle  index.doctree
fortran/src/: building.html  developing.html  sphinx-howto.html  using.html
installtest/: CMakeLists.txt  libtest.cc
jmm/formatting-automation/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
jmm/portable-class-lambda/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
jmm/portable-variant/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
main/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/src/: building.html  developing.html  sphinx-howto.html  using.html
mauneyc/templated_md/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
plan_histories/: MR109.md
ports-of-call/: array.hpp  f_portable.f90  math_utils.hpp  portability.hpp  portable_arrays.hpp  portable_config.hpp  portable_errors.hpp  portable_memory.hpp  power.hpp  ragged.hpp  robust_utils.hpp  span.hh  span.hpp  static_vector.hpp  variant.hpp
ports-of-call/ragged/: ragged_kokkos.hpp  ragged_offsets_core.hpp  ragged_std.hpp  ragged_thrust.hpp
ports-of-call/utility/: array.hpp  array_algo.hpp  index_algo.hpp
ports-of-call/variant/: config.hpp  in_place.hpp  lib.hpp  variant.hpp
script/: format.sh
spack-repo/: repo.yaml
test/: CMakeLists.txt  test_array.cpp  test_main.cpp  test_math_utils.cpp  test_mdidx.cpp  test_memory.cpp  test_portability.cpp  test_portsofcall.cpp  test_power.cpp  test_ragged.cpp  test_robust_utils.cpp  test_span.cpp  test_static_vector.cpp  test_static_vector_iterator.cpp  test_static_vector_kokkos.cpp  test_utilities.hpp  test_variant.cpp
v1.0.0/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.0.0/.doctrees/: environment.pickle  index.doctree
v1.0.0/_sources/: index.rst.txt
v1.0.0/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.1.0/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.1.0/.doctrees/: environment.pickle  index.doctree
v1.1.0/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.2.0/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.2.0/.doctrees/: environment.pickle  index.doctree
v1.2.0/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.3.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v1.3.0/.doctrees/: environment.pickle  index.doctree
v1.3.0/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.4.0/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.4.0/.doctrees/: environment.pickle  index.doctree
v1.4.0/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.4.1/: .buildinfo  genindex.html  index.html  search.html
v1.4.1/.doctrees/: environment.pickle  index.doctree
v1.4.1/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.4.2/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v1.4.2/.doctrees/: environment.pickle  index.doctree
v1.4.2/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.5.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v1.5.1/.doctrees/: environment.pickle  index.doctree
v1.5.1/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.5.2/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.5.2/.doctrees/: environment.pickle  index.doctree
v1.5.2/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.6.0/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.6.0/.doctrees/: environment.pickle  index.doctree
v1.6.0/src/: building.html  developing.html  sphinx-howto.html  using.html
v1.7.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v1.7.0/.doctrees/: environment.pickle  index.doctree
v1.7.0/src/: building.html  developing.html  sphinx-howto.html  (+1 more)
v1.7.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v2.0.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html
v2.0.1/: .buildinfo  genindex.html  index.html  search.html
v2.1.0/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
(+204 files in other folders)
